<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fare_saving_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TravelCardCalculatorActivity">

    <LinearLayout
        android:id="@+id/journey_specification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/line_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_make"
            android:textSize="@dimen/specification_font_size" />

        <EditText
            android:id="@+id/number_of_journies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:textSize="@dimen/specification_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/journey_text_padding"
            android:paddingStart="@dimen/journey_text_padding"
            android:paddingRight="@dimen/journey_text_padding"
            android:text="@string/journeys_a"
            android:textSize="@dimen/specification_font_size" />

        <Spinner
            android:id="@+id/journey_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/compare_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_would_like_to_compare"
        android:textSize="@dimen/specification_font_size"
        android:layout_below="@id/journey_specification"
        android:paddingBottom="@dimen/line_padding"/>

    <LinearLayout
        android:id="@+id/first_to_compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compare_description"
        android:paddingBottom="@dimen/line_padding" >

        <Spinner
            android:id="@+id/first_to_compare_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at"
            android:textSize="@dimen/specification_font_size" />

        <EditText
            android:id="@+id/first_to_compare_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/specification_font_size"
            android:ems="5"/>

    </LinearLayout>

    <TextView
        android:id="@+id/compare_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_the_cost_of"
        android:textSize="@dimen/specification_font_size"
        android:layout_below="@id/first_to_compare"
        android:paddingBottom="@dimen/line_padding"/>

    <LinearLayout
        android:id="@+id/second_to_compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compare_with"
        android:paddingBottom="@dimen/line_padding" >

        <Spinner
            android:id="@+id/second_to_compare_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at"
            android:textSize="@dimen/specification_font_size" />

        <EditText
            android:id="@+id/second_to_compare_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/specification_font_size"
            android:ems="5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/duration_to_consider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_to_compare"
        android:paddingBottom="@dimen/line_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/between"
            android:textSize="@dimen/specification_font_size" />

        <EditText
            android:id="@+id/date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:textSize="@dimen/specification_font_size"
            android:inputType="date" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textSize="@dimen/specification_font_size" />

        <EditText
            android:id="@+id/date_to"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="6"
            android:textSize="@dimen/specification_font_size"
            android:inputType="date" />

    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/duration_to_consider"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/specification_font_size" />
</RelativeLayout>
